syntax = "proto3";

package api.interface.v1;
import "google/api/annotations.proto";

option go_package = "example.com/xxx/interface/api/interface/v1;v1";
option java_multiple_files = true;
option java_package = "api.interface.v1";

service Demo {
  rpc ListPage (RoleListRequest) returns (RoleListReply){
    option (google.api.http) = {
      get: "/role/list",
    };
  }
}

message RoleListRequest {
  int64 pageNo = 1;
  int64 pageSize = 2;
  string sort = 3;
  string direction = 4;
  string roleCode = 5;
  string roleName = 6;
}

message RoleReply {
  int64 id = 1;
  string roleCode = 2;
  string roleName = 3;
}

message RoleListReply {
  int64 count = 1;
  int32 page_no = 2;
  int32 page_size = 3;
  repeated RoleReply roleList = 4;
}
